Closed Bug 1199904 Opened 10 years ago Closed 10 years ago

No audio in YouTube or A/V sync very broken

Categories

(Core :: Audio/Video: Playback, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: jya, Assigned: jya)

References

(Blocks 1 open bug, )

Details

(Keywords: regression)

Attachments

(1 file)

STR: 1: Open https://www.youtube.com/watch?v=XqLTe8h0-jo 2: Seek to 60s 3: Change video resolution to 1080p 4: Wait for playback to restart 5: Seek to 5s What's happening: after seeking to 5s the spinner goes on while data is being rebuffered and playback restart. However, there's now no audio. After about a minute audio will start playing, but about 1 minute A/V sync off from the video. What should be happening: Audio and video starts playing, in perfect sync.
I can reproduce this behaviour with almost every youtube videos.
about:media content https://www.youtube.com/watch?v=o6BXpFBhZZQ mediasource:https://www.youtube.com/cc630fc2-20d0-2042-b817-21dc10010d22 currentTime: 28.929095 SourceBuffer 0 start=0 end=131.773151 SourceBuffer 1 start=0 end=131.72 Internal Data: Dumping data for demuxer 14e2e0230: Dumping Audio Track Buffer(audio/mp4a-latm): - mLastAudioTime: 60.813015 NumSamples:5675 Size:3419296 NextGetSampleIndex:2619 NextInsertionIndex:5675 Buffered: ranges=[(0.000000, 131.773151)] Dumping Video Track Buffer(video/avc) - mLastVideoTime: 29.400000 NumSamples:3293 Size:33346082 NextGetSampleIndex:736 NextInsertionIndex:3293 Buffered: ranges=[(0.000000, 131.720000)] Notice the value for last audio time: 60s while video is 29.4s ; that's after letting video replay for 25s.
Depends on: 1197075
Decode ahead will be stopped when seeking or when switching resolution.
Attachment #8654495 - Flags: review?(gsquelart)
Assignee: nobody → jyavenard
Attachment #8654495 - Flags: review?(gsquelart) → review+
Keywords: checkin-needed
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: