Bug 1199904: Only start decoding ahead after explicitly requesting data. r=gerald

Decode ahead will be stopped when seeking or when switching resolution.